The main functionality of the SimpleTodoManager is working - new date is created with tasks - sub tasks are included - tasks starting with x are included - tasks starting with numbers instead of dashes are allowed - *bug* TODO and @ are not copied - settings